<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
    <ImageView
        android:src="@drawable/headline_icon"
        android:layout_width="match_parent"/>
    <GridLayout
        android:rowCount="3"
        android:columnCount="2"
        android:layout_gravity="center">
        <TextView android:text="@string/hello_world"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"/>
        <Button android:text="@string/linear_layout"/>
        <Button android:text="@string/table_layout"/>
        <Button android:text="@string/frame_layout"/>
        <Button android:text="@string/grid_layout"/>
    </GridLayout>
    <ImageView android:src="@drawable/baseline_icon"
        android:layout_width="match_parent"/>
</GridLayout>