<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="0,2"
    android:stretchColumns="1,3"
    android:padding="4dp">
    <TableRow>
        <TextView android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"/>
    </TableRow>
    <TableRow>
        <ImageView android:src="@drawable/android" />
        <Button
        android:text="@string/linear_layout" />
        <ImageView android:src="@drawable/android" />
        <Button android:text="@string/relative_layout" />
    </TableRow>
    <TableRow>
        <ImageView android:src="@drawable/android"/>
        <Button android:text="@string/frame_layout"
            android:textColor="@color/text_color"/>
        <ImageView android:src="@drawable/android" />
        <Button android:text="@string/grid_layout" />
    </TableRow>
</TableLayout>