<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <ImageView android:src="@drawable/headline_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>
    <GridLayout
        android:rowCount="3"
        android:columnCount="2"

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        >
        <TextView android:text="@string/hello_world"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"/>
        <Button android:text="@string/linear_layout"
            android:onClick="onClickLinearLayout"/>
        <Button android:text="@string/table_layout"
            android:onClick="onClickTableLayout"/>
        <Button android:text="@string/frame_layout"
            android:onClick="onClickFrameLayout"/>
        <Button android:text="@string/grid_layout"
            android:onClick="onClickGridLayout"/>
    </GridLayout>
    <ImageView android:src="@drawable/baseline_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>