<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/app_background"
    android:orientation="vertical">
    <ImageView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/headline_icon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"/>
    <Button
        android:id="@+id/button_TableLayout"
        android:textColor="@color/text_color_red"
        style="@style/ButtonStyle"
        android:background="@drawable/button_selector"
        android:onClick="onClickTableLayout"
        android:text="@string/table_layout"/>
    <Button
        android:id="@+id/button_RelativeLayout"
        android:background="@drawable/button_selector"
        android:onClick="onClickRelativeLayout"
        style="@style/ButtonStyle"
        android:text="@string/relative_layout"/>
    <Button
        android:id="@+id/button_FrameLayout"
        android:onClick="onClickFrameLayout"
        android:background="@drawable/button_selector"
        style="@style/ButtonStyle"
        android:text="@string/frame_layout"/>
    <Button
        android:id="@+id/button_GridLayout"

        android:onClick="onClickGridLayout"
        android:background="@drawable/button_selector"
        style="@style/ButtonStyle"
        android:text="@string/grid_layout"/>
</LinearLayout>